fix: hide scrollbars globally on horizontal scroll sections

--- a/src/style.css
+++ b/src/style.css
@@ -15,3 +15,11 @@ body {
 .fade-leave-to {
   opacity: 0;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
